# PurposeOps

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PORTING.md  README.md  client-manager.nu  config-loader.nu  config-manager.nu  config.nu  config_manager.nu  context-manager.nu  customer-manager.nu  deployment-manager.nu  docker-compose-functions.nu  docker-functions.nu  machine-manager.nu  ppo.nu  prompt-manager.nu  service-manager.nu  ssh-manager.nu  templater.nu
archive/: ppo.nu
config/: config-helper.nu  config.nu  customers-config-manager.nu  hosts-config-manager.nu  mod.nu  services-config-manager.nu
context/: context-manager.nu
customer-manager/: backup.nu  core.nu  mod.nu  validations.nu
deployment-manager/: core.nu  internal.nu  mod.nu  validations.nu
docker/: config.nu  core.nu  mod.nu  operations.nu  ui.nu
machine-manager/: mod.nu
ppo-rs/: Cargo.toml
ppo-rs/src/: backup.rs  bootstrap.rs  check.rs  config.rs  customer.rs  deployment.rs  docker.rs  host.rs  main.rs  provision.rs  secrets.rs  service.rs  ssh.rs  table.rs  template.rs  ui.rs
ppo-rs/src/bootstrap/: tests.rs
ppo-rs/src/config/: tests.rs
ppo-rs/src/docker/: tests.rs
ppo-rs/src/prompt/: tests.rs
ppo-rs/src/ssh/: tests.rs
ppo-rs/src/table/: tests.rs
ppo-rs/src/template/: tests.rs
ppo-rs/tests/: integration_workflow.py
src/: backup.rs  backup_agent.rs  check.rs  config.rs  deployment.rs  docker.rs  main.rs  prompt.rs  provision.rs  secrets.rs  ssh.rs  tests.rs  ui.rs
tests/: backup_agent_workflow.py  bootstrap_workflow.py  integration_workflow.py  (+1 more)
tests/vm/: lib.sh  (+2 more)
(+34 files in other folders)
