[package]
name = "ppo"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.3"
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
clap_complete_nushell = "4.6.0"
inquire = "0.9.4"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
